--- a/public/client.html
+++ b/public/client.html
@@ -25,9 +25,9 @@
             <img src="../images/logo.svg" style="margin-left: 30px" />
           </a>
           <div class="contents">
-            <a href="client.html">채팅</a>
-            <a href="calendar.html">캘린더</a>
-            <a href="profile.html">프로필</a>
+            <a href="client.html" id="ct">채팅</a>
+            <a href="calendar.html" id="cl">캘린더</a>
+            <a href="profile.html" id="pl">프로필</a>
           </div>
         </div>
         <div id="chatArea">
@@ -36,8 +36,12 @@
           </div>
         </div>
         <div class="text-bar">
+          <input
+            id="messageInput"
+            placeholder="메시지를 입력하세요"
+            onkeypress
+          />
           <button id="sendMessageButton">전송</button>
-          <input id="messageInput" placeholder="메시지를 입력하세요" />
         </div>
         <img src="../images/Keyboard.png" alt="" />
       </div>
@@ -56,11 +60,6 @@
         fetch("http://localhost:3000/messages")
           .then((response) => response.json())
           .then((data) => {
-            if (!Array.isArray(data)) {
-              console.error("응답 데이터가 배열이 아닙니다:", data);
-              return;
-            }
-
             const messageList = document.getElementById("message");
             if (!messageList) {
               console.error("메시지 리스트를 찾을 수 없습니다.");
@@ -68,18 +67,29 @@
             }
 
             data.forEach((msg) => {
+              const nickname = document.createElement("p");
+              nickname.classList.add("nickname");
+              nickname.textContent = `${msg.nickname}`;
+
               const messageItem = document.createElement("div");
               messageItem.classList.add("message-item");
 
-              const nickname = document.createElement("p");
-              nickname.textContent = `${msg.nickname}`;
+              const messageContent = document.createElement("div");
+              messageContent.classList.add("message-content");
 
-              const message = document.createElement("li");
+              const img = document.createElement("img");
+              img.src = msg.profileimage;
+
+              const message = document.createElement("p");
               message.textContent = `${msg.message_text}`;
 
-              messageItem.appendChild(nickname);
-              messageItem.appendChild(message);
+              messageItem.appendChild(img);
+              messageContent.appendChild(nickname); // 수정된 부분
+              messageContent.appendChild(message); // 수정된 부분
+              messageItem.appendChild(messageContent); // 수정된 부분
               messageList.appendChild(messageItem);
+
+              document.getElementById("message").appendChild(messageItem);
             });
           })
           .catch((error) => {
@@ -96,12 +106,12 @@
           messageItem.classList.add("message-item");
 
           const img = document.createElement("img");
-          img.src = messageData.profile_image;
+          img.src = messageData.profileimage; // 수정된 부분
 
           const messageContent = document.createElement("div");
           messageContent.classList.add("message-content");
 
-          const nickname = document.createElement("div");
+          const nickname = document.createElement("p");
           nickname.classList.add("nickname");
           nickname.textContent = messageData.nickname;
 
@@ -120,12 +130,12 @@
         document.getElementById("sendMessageButton").onclick = function () {
           const messageInput = document.getElementById("messageInput");
           const nickname = "레전드방송";
-          const profileImage =
+          const profileimage =
             "https://github.com/guhyunwoo/Meow/blob/master/images/%EC%BD%94%EC%BD%94.png?raw=true";
           const messageData = {
             nickname: nickname,
             message: messageInput.value,
-            profile_image: profileImage,
+            profileimage: profileimage,
           };
           socket.send(JSON.stringify(messageData));
           messageInput.value = "";
