--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>family connection</title>
-    <link rel="stylesheet" href="./profile.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="wrapper">
@@ -20,13 +20,6 @@
             <a href="profile.html" id="pl">프로필</a>
           </div>
         </div>
-        <div id="pr-name">
-          <h2>문소정</h2>
-          <p>daughter</p>
-        </div>
-        <img src="../images/Photo by Pixabay.png" id="profile_image" />
-        <p>엄마 아빠 언니 항상 사랑해요</p>
-        <p>매일매일 좋은 하루만 가득하길</p>
       </div>
     </div>
   </body>
